--- a/src/app/pages/home/components/main-carousel/main-carousel.component.html
+++ b/src/app/pages/home/components/main-carousel/main-carousel.component.html
@@ -1,23 +1,13 @@
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="/assets/infant-2717347_1280.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="/assets/nothing-1785760_1280.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="/assets/wine-6688901_1280.jpg" class="d-block w-100" alt="...">
-        </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
-</div>
+<ngb-carousel class="carousel-fade">
+    @for (item of items; track item) {
+        <ng-template ngbSlide>
+            <a [href]="'/post/'+item.id">
+                <img [src]="'/assets/'+item.imagemCapa" alt="..."/>
+            </a>
+            <div class="carousel-caption">
+                <h3 class="text-body">{{item.titulo}}</h3>
+                <p class="text-body">{{item.descricao}}</p>
+            </div>
+        </ng-template>
+    }
+</ngb-carousel>
