--- a/src/app/core/components/main-header/main-header.component.html
+++ b/src/app/core/components/main-header/main-header.component.html
@@ -1,19 +1,22 @@
-<!-- <div class="container"> -->
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="/" class="nav-link px-2 text-body-secondary">Início</a></li>
-            <li><a href="/faq" class="nav-link px-2 text-body-secondary">FAQ</a></li>
-            <li><a href="/sobre" class="nav-link px-2 text-body-secondary">Sobre nós</a></li>
-            <li><a href="/contato" class="nav-link px-2 text-body-secondary">Contato</a></li>
-        </ul>
+<header class="header p-3 text-body-secondary bg-body-tertiary">
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><a [routerLink]="['']" class="nav-link px-2 text-body-secondary">Início</a></li>
+                <li><a [routerLink]="['faq']" class="nav-link px-2 text-body-secondary">FAQ</a></li>
+                <li><a [routerLink]="['termos']" class="nav-link px-2 text-body-secondary">Termos</a></li>
+                <li><a [routerLink]="['sobre']" class="nav-link px-2 text-body-secondary">Sobre</a></li>
+                <li><a [routerLink]="['contato']" class="nav-link px-2 text-body-secondary">Contato</a></li>
+            </ul>
 
-        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-            <input type="search" class="form-control" placeholder="Pesquisar..." aria-label="Search">
-        </form>
+            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                <input type="search" class="form-control" placeholder="Pesquisar...">
+            </form>
 
-        <div class="text-end">
-            <a href="/login" class="btn btn-outline-primary me-2">Login</a>
-            <a href="/registrar" class="btn btn-primary">Registrar</a>
+            <div class="text-end">
+                <a [routerLink]="['login']" class="btn btn-outline-primary me-2">Login</a>
+                <a [routerLink]="['registrar']" class="btn btn-primary">Registrar</a>
+            </div>
         </div>
     </div>
-<!-- </div> -->
+</header>
