Footer com créditos

--- a/src/app/core/components/main-footer/main-footer.component.html
+++ b/src/app/core/components/main-footer/main-footer.component.html
@@ -7,6 +7,7 @@
             <li class="nav-item"><a [routerLink]="['sobre']" class="nav-link px-2 text-body-secondary">Sobre</a></li>
             <li class="nav-item"><a [routerLink]="['contato']" class="nav-link px-2 text-body-secondary">Contato</a></li>
         </ul>
-        <p class="text-center text-body-secondary">© 2023 Company, Inc</p>
+        <p class="text-center text-body-secondary">© 2024 - Blog usando Angular 17 e Bootstrap 5.3 SCSS</p>
+        <p class="text-center text-body-secondary">Baseado no bootcamp 'Desenvolvimento Frontend com Angular' da <a href="https://www.dio.me/">DIO</a></p>
     </div>
 </footer>
